update cell types

--- a/src/ClientApp/components/Cell/styles.css
+++ b/src/ClientApp/components/Cell/styles.css
@@ -21,3 +21,8 @@
 .cell_target {
     background-image: radial-gradient(#9000ff 0, #9000ff 15%, transparent 17%, transparent 100%)
 }
+
+.cell_boxOnTarget {
+    background-image: url(./images/package.svg);
+    filter: brightness(50%);
+}
